@@ -995,7 +995,7 @@
 						</item>
 						<item>
 							<label>$LOCALIZE[20343]</label>
-							<onclick>ActivateWindow(10025,"plugin://plugin.video.balandro/?ewogICAgImFjdGlvbiI6ICJsaXN0X2FsbCIsIAogICAgImNhdGVnb3J5IjogIkVzdHJlbm9zUGFwYXlhIiwgCiAgICAiY2hhbm5lbCI6ICJlc3RyZW5vc3BhcGF5YSIsIAogICAgImluZm9MYWJlbHMiOiB7fSwgCiAgICAicGxvdCI6ICJbQ2FzdGVsbGFubywgTGF0aW5vLCBWb3NlXVtDUl1bQ1JdU2VyaWVzLCBjb24gY2Fww610dWxvcyBkZSBlc3RyZW5vIGVuIGNhc3RlbGxhbm8sIGxhdGlubyB5IFZvc2UuIiwgCiAgICAidGh1bWJuYWlsIjogIi9ob21lL2Rhcmtvem1hLy5rb2RpL2FkZG9ucy9wbHVnaW4udmlkZW8uYmFsYW5kcm8vcmVzb3VyY2VzL21lZGlhL2NoYW5uZWxzL3RodW1iL2VzdHJlbm9zcGFwYXlhLnBuZyIsIAogICAgInRpdGxlIjogIk3DoXMgdmlzdGFzIiwgCiAgICAidXJsIjogImh0dHBzOi8vd3d3LmVzdHJlbm9zcGFwYXlhLmNvbS9saXN0YS1zZXJpZXMtcG9wdWxhcmVzLyIKfQ%3d%3d",return)</onclick>
+							<onclick>ActivateWindow(10025,"plugin://plugin.video.balandro/?ewogICAgImFjdGlvbiI6ICJsaXN0X2FsbCIsIAogICAgImNhdGVnb3J5IjogIlBlbGlzTWFydCIsIAogICAgImNoYW5uZWwiOiAicGVsaXNtYXJ0IiwgCiAgICAiaW5mb0xhYmVscyI6IHt9LCAKICAgICJwbG90IjogIltDYXN0ZWxsYW5vLCBMYXRpbm8sIFZvc2VdW0NSXVtDUl1QZWzDrWN1bGFzIHBvciBnw6luZXJvcywgYcOxby4gVGFtYmnDqW4gU2VyaWVzIiwgCiAgICAic2VhcmNoX3R5cGUiOiAidHZzaG93IiwgCiAgICAidGh1bWJuYWlsIjogIi9ob21lL2Rhcmtvem1hLy5rb2RpL2FkZG9ucy9wbHVnaW4udmlkZW8uYmFsYW5kcm8vcmVzb3VyY2VzL21lZGlhL2NoYW5uZWxzL3RodW1iL3BlbGlzbWFydC5wbmciLCAKICAgICJ0aXRsZSI6ICJDYXTDoWxvZ28iLCAKICAgICJ1cmwiOiAiaHR0cHM6Ly9zbWFydHBlbGkudHYvY2FydGVsZXJhLXNlcmllcy8iCn0%3d",return)</onclick>
 							<property name="menu_id">$NUMBER[45020]</property>
 							<thumb>icons/sidemenu/tv.png</thumb>
 							<property name="id">tvs</property>
